#135 fix footer overlap on mobile

--- a/dll/static/src/scss/footer.scss
+++ b/dll/static/src/scss/footer.scss
@@ -1,9 +1,9 @@
 .footer {
   line-height: 1.3em;
   position: absolute;
-  bottom: 0;
   left: 0;
   width: 100%;
+  padding-bottom: 2rem;
 }
 .footer__text{
   font-size: 14px;
@@ -33,6 +33,10 @@
   }
 }
 @media(min-width: 768px) {
+  .footer {
+    bottom: 0;
+    padding-bottom: 0;
+  }
   .footer__partner-logo {
     margin-right: 15px;
   }
